@@ -1,0 +1,1 @@
+#include <sysdeps/arm/armv6t2/memchr.S>
